--- a/globals.css
+++ b/globals.css
@@ -31,3 +31,18 @@ body {
     text-wrap: balance;
   }
 }
+
+/* styles/globals.css */
+
+.my-masonry-grid {
+  display: flex;
+  margin-left: -30px; /* gutter size offset */
+  width: auto;
+}
+.my-masonry-grid_column {
+  padding-left: 30px; /* gutter size */
+  background-clip: padding-box;
+}
+.my-masonry-grid_item {
+  margin-bottom: 30px; /* space between items */
+}
